0.1. Отладка лямбда в IDEA [#357936]